# claimkeep

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml
.claude-plugin/: marketplace.json
benchmark/: README.md  probes.example.json  score.py
claimkeep/: __init__.py  brief.py  cli.py  config.py  redact.py  rehydrate.py
claimkeep/harvesters/: __init__.py  base.py  calibration.py  regex_floor.py
docs/: BRIEF_SCHEMA.md
examples/: sample_transcript.jsonl  single_agent_quickstart.md
plugins/claimkeep/.claude-plugin/: plugin.json
plugins/claimkeep/hooks/: hooks.json
plugins/claimkeep/scripts/: postcompact.sh  precompact.sh
tests/: test_smoke.py
